fixed top navigation dropdowns on mobile

--- a/assets/styles/_general.scss
+++ b/assets/styles/_general.scss
@@ -138,3 +138,7 @@ hr {
     }
   }
 }
+
+.dropdown .background {
+  background-color: $backdrop-color;
+}
